--- a/assets/css/web__modal-window.css
+++ b/assets/css/web__modal-window.css
@@ -5,59 +5,68 @@
 	height: 100vh;
 	background: #fff;
 	position: fixed;
-	display: none;
+	display: table;
 	text-align: left;
 	z-index: 10001;
 }
 
+.web__modal--body{
+	width: 100%;
+	display: table-cell;
+	vertical-align: middle;
+	margin: 5vw auto;
+}
+
 .web__description{
 	width: 40%;
-	height: 50vh;
-	display: inline-block;
-	text-align: left;
-	padding-top: 10vw;
-	margin-left: 20%;
+	float: left;
+	margin: 15vw 8%;
+	text-align: center;
+	vertical-align: middle;
+	/*background: orange;*/
 }
 
-.modal-content h1{
+.web__description h1{
 	font-size: 1.3vw;
   letter-spacing: 0.2em;
-	margin-top: 10vw;
-	/*background: red;*/
 }
 
-.modal-content p{
+.web__description p{
 	font-size: 1vw;
-	font-weight: 300;
 }
 
 .modal-content ul{
+	width: 40%;
+	display: block;
+	margin-left: 55%;
+	text-align: center;
+}
+
+.modal-content li{
 	display: inline;
-	margin-left: -10%;
 }
 
 .modal__img{
+	width: 30%;
 	vertical-align: text-top;
-	width: 10vw;
-	margin-top: -15vw;
+	margin-right: 10%;
 	border: solid 1px #f5f5f5;
+	display: inline;
 }
 
 .modal__img--v2{
 	vertical-align: text-top;
 	width: 8vw;
-	margin-top: -17vw;
 	border: solid 1px #f5f5f5;
 }
 
 .modal__img--small{
 	width: 4vw;
-	margin-top: -17vw;
 	border: solid 1px #f5f5f5;
-	vertical-align: text-top;
+	vertical-align: top;
 }
 
-/*#modal-overlay {
+#modal-overlay {
 	z-index: 1000;
 	display: none ;
 	position: fixed ;
@@ -66,28 +75,14 @@
 	width: 100%;
 	height: 100vh;
 	background-color: #fff;
-}*/
+}
 
 #modal-close{
-	letter-spacing: 0.3em;
-	font-size: 0.5vw;
-}
-
-.web__back{
-	width: 30px;
-	position: relative;
-	left: 20%;
-	top: -5%;
-}
-
-.web__back img{
 	display: block;
-	height: 30px;
-	margin: 0;
+	padding: 5px;
 }
 
-.web__back p{
-	margin: 0;
-	padding: 0;
-	font-size: 0.5vw;
+#modal-close img{
+	width: 20px;
+	padding: 5px;
 }
